--- a/BJW_APCSP/About_Me.html
+++ b/BJW_APCSP/About_Me.html
@@ -4,7 +4,7 @@
     <title>This text appears in the tab</title>
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
-    	<a  href="Home.html">Home</a>
+    	<a  href="index.html">Home</a>
     	<a class="active" href="#About_Me">About Me</a>
     	<a href="Projects.html">Projects</a>
     </div>
