--- a/BJW_APCSP/Projects.html
+++ b/BJW_APCSP/Projects.html
@@ -4,7 +4,7 @@
     <title>This text appears in the tab</title>
     <link rel="stylesheet" href="style.css">
     <div class="topnav">
-    	<a href="Home.html">Home</a>
+    	<a href="index.html">Home</a>
     	<a href="About_Me.html">About Me</a>
     	<a class="active" href="#Projects">Projects</a>
     </div>
