--- a/About_Me.html
+++ b/About_Me.html
@@ -16,7 +16,7 @@
 
     <img class = "me" src = "Images/me.jpeg">
     <div class="holder2">
-    		<p class = "text">Hello, my name is Brandon. I am a highschool senior. I like to code and know how to code in JavaScript and HTML. My favorite video games are The Legend Of Zelda Breath Of The Wild, OneShot, and Super Smash Bros. </p>	
+    		<p class = "text">Hello, my name is Brandon. I am a highschool senior. I like to code and know how to code in JavaScript and HTML. If you want to see some of the projects I have made click the Projects tab. My favorite video games are The Legend Of Zelda Breath Of The Wild, OneShot, and Super Smash Bros.  </p>	
 	</div>
   </body>
 </html>
